--- a/styles-scss/media-quieries/queries.scss
+++ b/styles-scss/media-quieries/queries.scss
@@ -321,9 +321,9 @@
   }
 }
 
-/* BELOW 544px (Phones) */
+/* BELOW 592px (Phones) */
 
-@media (max-width: 34em) {
+@media (max-width: 37em) {
   .footer {
     &__main {
       .row {
