--- a/styles-scss/reset/reset.scss
+++ b/styles-scss/reset/reset.scss
@@ -37,9 +37,9 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   overflow-x: hidden;
+  max-width: 100%;
 }
 body {
-  overflow-x: hidden;
   position: relative;
   // color: $main-black;
 }
